--- a/Index.html
+++ b/Index.html
@@ -108,14 +108,14 @@
       <quatation>
         <img src="./assets/img/Quatation Mark.svg">
       </quatation>
-      <p>Awalnya saya malu dengan mertua karena <br />tidak bisa memasak, kini mereka lebih suka <br />makan malam di rumah demi menyantap <br />masakan yang saya buat
+      <p>Awalnya saya malu dengan mertua karena <br />tidak bisa memasak, kini mereka lebih suka <br />makan malam di rumah demi menyantap <br />masakan yang saya buat sendiri
       <div class="CamellaPic">
         <img src="./assets/img/Girl Pic 2nd.svg">
       </div>
       <div class="Camella">
         <gro>
-          <h4>Carmella Sarah </h14>
-            <h5>Vage Master</h5>
+          <h4>Camella Sarah </h14>
+            <h5>Vege Master</h5>
         </gro>
       </div>
     </div>
@@ -159,8 +159,8 @@
       <img src="./assets/img/lastfoodpic.svg">
     </div>
     <div class="dwddesc">
-      <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Download Our App <br />And Join The Contest </h1>
-      <p>In Order To Improve Our Cooking Skils. <br />We Do Need A Food Photography </p>
+      <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Download our app <br />and join the contest </h1>
+      <p>In order to improve our cooking Skils, <br />we do need a food photography </p>
       <sign>
         <img src="/assets/img/DwdSign.svg">
       </sign>
@@ -215,10 +215,10 @@
               <h4>Be Our Friend</h4>
               <ul>
                 <li>
-                  <a href="#">3, Season Parkz Jakarta</a>
+                  <a href="#">3, Season Park, Jakarta</a>
                 </li>
                 <li>
-                  <a href="#">Support @foodyaar.co.id</a>
+                  <a href="#">support@foodyaar.co.id</a>
                 </li>
                 <li>
                   <a href="#">021 - 1111 - 2222</a>
@@ -230,7 +230,7 @@
       </nica>
     </div>
     <div class="Credit">
-      <p>All Rights Foodyar by Pixel From Build With Angga 2020</p>
+      <p>All Rights Reserved Foodyar by Pixel from BuildWith Angga 2020</p>
     </div>
   </body>
 </html>
